Fix background covering the Bottom Bar in Session Lobby
To do so, made the positioning of the bottom bar and text to absolute.
Note: This makes the bottom bar component always be absolutely positioned at the bottom of the page.

--- a/src/app/large-display/large-display.component.scss
+++ b/src/app/large-display/large-display.component.scss
@@ -38,7 +38,7 @@
 
     app-timer-progress-bar {
       position: absolute;
-      bottom: 0;
+      bottom: 64px;
       width: 100%;
       z-index: 1;
     }
