--- a/src/app/session-lobby/session-lobby.component.scss
+++ b/src/app/session-lobby/session-lobby.component.scss
@@ -38,6 +38,8 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  position: absolute;
+  right: 16px;
 }
 
 .number-of-players {
